{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 60,
  "lineage": "7213ac76-7c4f-938b-58c7-8ebd9bec15b4",
  "resources": [
    {
      "module": "module.aws",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b9064170e32bde34",
            "arn": "arn:aws:ec2:us-east-2:208171282470:instance/i-038f28e0ed34b4aea",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "test_profile_1",
            "id": "i-038f28e0ed34b4aea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01b66a71ef9ee34ea",
            "private_dns": "ip-10-1-0-63.us-east-2.compute.internal",
            "private_ip": "10.1.0.63",
            "public_dns": "ec2-3-137-173-110.us-east-2.compute.amazonaws.com",
            "public_ip": "3.137.173.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-002fbb3497431623f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0695601c6ae31bfa8",
            "tags": {
              "Name": "instance"
            },
            "tags_all": {
              "Name": "instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0b0b3d542728ae1ec"
            ]
          },
          "dependencies": [
            "module.aws.aws_iam_instance_profile.test_profile_1",
            "module.vpc.aws_subnet.subnet_public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:208171282470:internet-gateway/igw-0cdff5a554928b424",
            "id": "igw-0cdff5a554928b424",
            "owner_id": "208171282470",
            "vpc_id": "vpc-0a20bd16f4b15b335"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:208171282470:route-table/rtb-0bd9413065d7ae516",
            "id": "rtb-0bd9413065d7ae516",
            "owner_id": "208171282470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cdff5a554928b424",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0a20bd16f4b15b335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0536b4225a5d95ffd",
            "route_table_id": "rtb-0bd9413065d7ae516",
            "subnet_id": "subnet-0695601c6ae31bfa8"
          },
          "dependencies": [
            "module.vpc.aws_subnet.subnet_public",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb_public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:208171282470:security-group/sg-0723766a9b72cc6a8",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0723766a9b72cc6a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sg_22",
            "name_prefix": "",
            "owner_id": "208171282470",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a20bd16f4b15b335"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:208171282470:subnet/subnet-0695601c6ae31bfa8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-0695601c6ae31bfa8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "208171282470",
            "vpc_id": "vpc-0a20bd16f4b15b335"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:208171282470:vpc/vpc-0a20bd16f4b15b335",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0299b18e175888a0d",
            "default_route_table_id": "rtb-04387c5d029e3c0a5",
            "default_security_group_id": "sg-0b0b3d542728ae1ec",
            "dhcp_options_id": "dopt-f3059a98",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a20bd16f4b15b335",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04387c5d029e3c0a5",
            "owner_id": "208171282470"
          }
        }
      ]
    }
  ]
}